GP2-2078: Fix header alignment

--- a/core/sass/shared/_base.scss
+++ b/core/sass/shared/_base.scss
@@ -409,3 +409,8 @@ $mobile: 640px;
         }
     }
 }
+
+.shared-personalisation-bar {
+    max-width: 100%;
+    margin: 0 30px;
+}
